<resources>
    <string name="app_name">weather_detail</string>
    <string name="title_wind_direction">Wind Direction:</string>
    <string name="title_wind_speed">Wind Speed:</string>
    <string name="title_temperature">Temperature:</string>
    <string name="title_current_condition">Current Condition:</string>
    <string name="title_last_update">Last Update From API:</string>
    <string name="title_location">Location:</string>
    <string name="button_retry">Retry</string>
    <string name="button_settings">Settings</string>
    <string name="warning_location_permission_needed">Location permission is needed</string>
    <string name="warning_locaiton_couldnt_be_fetched">Location couldn\'t be fetched</string>
</resources>
